Службы/svc1.yml
---
apiVersion: v1
kind: Service
metadata:
  name: new-svc
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: new-app
  type: ClusterIP
