Службы/svc2.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-nt-svc
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx-nt
  type: ClusterIP
