Службы/svcRDMN.yml
---
apiVersion: v1
kind: Service
metadata:
  name: redmine
spec:
  ports:
  - port: 3000
    targetPort: 3000 
  selector:
    app: new-app
  type: ClusterIP
